--- a/src/index.css
+++ b/src/index.css
@@ -3,3 +3,5 @@
   padding: 0;
   box-sizing: border-box;
 }
+@import url('https://fonts.cdnfonts.com/css/modern-no-20');
+@import url('https://fonts.googleapis.com/css2?family=Cormorant+Infant:ital,wght@1,500&display=swap');
