--- a/src/components/styles/main.css
+++ b/src/components/styles/main.css
@@ -39,3 +39,40 @@
     border-radius: 1em;
     margin: 0 2em;
 }
+/* ! /////////////////// FINISH ONE SECTION ////////////////////// */
+
+
+.sectionAlco{
+    margin-top: 7em;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 4em;
+}
+.WineLeftPhoto{
+    width: 40%;
+    transition: 0.2s;
+}
+.WineLeftPhoto:hover{
+    transform: scale(1.05);
+}
+.Wine__rignt{
+    display: flex;
+    flex-direction: column;
+    gap: 1em;
+}
+.Wine__rignt_h2{
+    font-size: 4.6em;
+}
+.Wine__rignt_h3{
+    font-size: 2.5em;
+}
+.Wine__rignt_p{
+    font-size: 1.4em;
+    font-weight: 600;
+    padding-top: 1em;
+}
+.sectionAlcoReverse{
+    display: flex;
+    flex-direction: row-reverse;
+}
