--- a/src/components/styles/wine.css
+++ b/src/components/styles/wine.css
@@ -28,6 +28,8 @@
 .img_from_cardjson{
     margin: 1em 1em;
     border-radius: 1em;
+    width: 10%;
+    height: 320px;
 }
 .wine__info{
     padding-left: 2em;
