--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@
 }
 a{
   text-decoration: none;
-  color: black
+  color: black;
 }
 @import url('https://fonts.cdnfonts.com/css/modern-no-20');
 @import url('https://fonts.googleapis.com/css2?family=Cormorant+Infant:ital,wght@1,500&display=swap');
