--- a/src/components/styles/liquor.module.css
+++ b/src/components/styles/liquor.module.css
@@ -1,9 +1,9 @@
-.wine_card-box {
+.liq_card_box {
   margin: 0 auto;
   display: flex;
   flex-direction: column;
   align-items: center;
-  background-image: url(../../assets/bg-wine.jpg);
+  background-image: url(../../assets/bgLiquer.jpg);
   min-height: 100vh;
 }
 
@@ -13,7 +13,7 @@
   flex-direction: column;
   gap: 1em;
 }
-.wine__photo {
+.liq__photo {
   border: 2px solid black;
   border-radius: 1em;
   display: flex;
@@ -21,8 +21,8 @@
   flex-wrap: wrap;
   gap: 3em;
   /* background-color: rgba(199, 145, 95, 0.623); */
-  background-image: url(../../assets/wine__cards.jpg);
-  background-size: contain;
+  background-image: url(../../assets/liq__cards.png);
+  background-size: cover;
 }
 .img_from_cardjson {
   margin: 1em 1em;
@@ -48,8 +48,8 @@
 .wine__filterDesign {
   display: flex;
 }
-.wine__filterDesignContainer {
-  background-image: url(../../assets/BgFilte.jpg);
+.liquor__filterDesignContainer {
+  background-image: url(../../assets/BgFilterLiq.jpg);
   background-size: cover;
   text-align: center;
   border: 2px solid black;
