--- a/src/components/styles/whiskey.module.css
+++ b/src/components/styles/whiskey.module.css
@@ -37,7 +37,7 @@
 .img_from_cardjson {
   margin: 1em 1em;
   border-radius: 1em;
-  width: 16%;
+  /* width: 16%; */
   height: 320px;
 }
 .wiskey__info {
@@ -45,7 +45,6 @@
   display: flex;
   flex-direction: column;
   gap: 1.4em;
-  display: none;
 }
 .wine__name {
   font-size: 2em;
